add ui/javafx template